Fixed sidebar wrapper z-index.

--- a/packages/inkline/src/components/Sidebar/css/_variables.scss
+++ b/packages/inkline/src/components/Sidebar/css/_variables.scss
@@ -18,6 +18,8 @@ $sidebar-overlay-transition-easing: $transition-easing !default;
 
 $sidebar-overlay-background: rgba(0, 0, 0, 0.5) !default;
 
+$sidebar-z-index: $z-index-fixed !default;
+
 //
 // Variants
 //
